2008-10-27  Juanma Barranquero  <lekktu@gmail.com>

	* face-remap.el (text-scale-increase, text-scale-decrease)
	(text-scale-adjust): Remove &optional keyword from the arg list;
	the INC argument is not really optional, if the functions happen
	to be called from elisp.

2008-10-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el: Rename VC methods that were missed when vc-status was
	renamed to vc-dir.
	* vc-svn.el (vc-svn-dir-extra-headers): Rename from
	vc-svn-status-extra-headers.
	* vc-hg.el (vc-hg-dir-printer): Rename from vc-hg-status-printer.
	(vc-hg-dir-extra-header): Rename from vc-hg-status-extra-headers.
	* vc-git.el (vc-git-dir-printer): Rename from vc-dir-status-printer.
	(vc-git-dir-extra-headers): Rename from vc-git-status-extra-headers.
	* vc-dir.el (vc-dir-mode): Use vc-dir-printer instead of
	vc-dir-status-printer.
	(vc-dir-headers): Use `dir-extra-headers' instead of
	`status-extra-headers'.
	(vc-dir-printer): Rename from vc-dir-status-printer.
	(vc-default-dir-extra-headers): Rename from
	vc-default-status-extra-headers.
	* vc-cvs.el (vc-cvs-dir-extra-headers): Rename from
	vc-cvs-status-extra-headers.

	* startup.el (server-name): Pacify byte compiler.
	(command-line): If --daemon=SERVER_NAME was used, set server-name
	before calling server-start.

2008-10-26  Romain Francoise  <romain@orebokech.com>

	* startup.el (command-line): Call daemon-initialized after
	starting the server.

2008-10-26  Kenichi Handa  <handa@m17n.org>

	* help-fns.el (describe-categories): Display the terse legend at
	the head.

	* international/characters.el: Docstrings of categories improved.

2008-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-mode): Don't impose ourselves on hippie.

	* faces.el (face-font-family-alternatives): Add "CMU Typewriter Text"
	to the courier family.
	* textmodes/tex-mode.el (tex-verbatim): Don't use "monospace" which is
	usually not serif'd and hence rather unlike verbatim's printed output.
